# mordomo

./: .gitignore  README.md  extension  package.json  vite.config.js
release-assets/: mordomo.desktop
source-code/: package.json
source-code/src/: app.css
source-code/src-tauri/: Cargo.toml  tauri.conf.json
source-code/src-tauri/capabilities/: default.json
source-code/src-tauri/src/: actions.rs  apps.rs  lib.rs  main.rs  plugins.rs  search.rs  settings.rs  setup.rs  state.rs  utils.rs
source-code/src/lib/features/settings/: Settings.ts  SettingsRepository.svelte.ts
source-code/src/routes/: +page.svelte  MainViewModel.svelte.ts
source-code/src/routes/form/: +page.svelte  FormViewModel.svelte.ts
src/: app.css
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: actions.rs  apps.rs  lib.rs  plugins.rs  search.rs  settings.rs  setup.rs  state.rs
src/lib/features/settings/: SettingsRepository.svelte.ts
src/routes/: +page.svelte  MainViewModel.svelte.ts
