[package]
name = "mordomo"
version = "0.1.0"
description = "A Tauri App"
authors = ["whiskers-apps"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mordomo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5.60", features = ["derive"] }
tracing-subscriber = "0.3.22"
postcard = { version = "1.1.3", features = ["alloc"] }
tux-icons = "0.4.5"
dirs = "6.0.0"
tokio = { version = "1.50.0", features = ["full"] }
mordomo-core = { version = "0.1.0-1", path = "../../../mordomo-core" }
notify = "8.2.0"
walkdir = "2.5.0"
freedesktop-desktop-entry = "0.8.1"
sniffer-rs = "1.1.2"
open = "5.3.3"
reqwest = "0.13.2"
log = "0.4.29"
tauri-plugin-log = {version = "2.8.0", features = ["colored"] }
tauri-plugin-dialog = "2"
regex = "1.12.3"
